tests/rosetta/out/C/cholesky-decomposition-1.error
cc: exit status 1
/tmp/cholesky-decomposition-1.c: In function ‘makeSym’:
/tmp/cholesky-decomposition-1.c:87:10: error: incompatible types when returning type ‘tmp_item_t’ but ‘int’ was expected
   87 |   return (tmp_item_t){.order = order, .ele = elements};
      |          ^
/tmp/cholesky-decomposition-1.c: At top level:
/tmp/cholesky-decomposition-1.c:90:15: error: unknown type name ‘map_string_int’
   90 | int unpackSym(map_string_int m) {
      |               ^~~~~~~~~~~~~~
/tmp/cholesky-decomposition-1.c: In function ‘printMat’:
/tmp/cholesky-decomposition-1.c:133:15: error: request for member ‘len’ in something not a structure or union
  133 |   while (i < m.len) {
      |               ^
/tmp/cholesky-decomposition-1.c:136:17: error: request for member ‘data’ in something not a structure or union
  136 |     while (j < m.data[i].len) {
      |                 ^
/tmp/cholesky-decomposition-1.c:137:26: error: request for member ‘data’ in something not a structure or union
  137 |       char *tmp7 = _str(m.data[i].data[j]);
      |                          ^
/tmp/cholesky-decomposition-1.c:138:34: warning: passing argument 1 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  138 |       char *tmp8 = concat_string(line, tmp7);
      |                                  ^~~~
/tmp/cholesky-decomposition-1.c:43:34: note: expected ‘char *’ but argument is of type ‘const char *’
   43 | static char *concat_string(char *a, char *b) {
      |                            ~~~~~~^
/tmp/cholesky-decomposition-1.c:140:16: error: request for member ‘data’ in something not a structure or union
  140 |       if (j < m.data[i].len - 1) {
      |                ^
/tmp/cholesky-decomposition-1.c:141:36: warning: passing argument 1 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  141 |         char *tmp9 = concat_string(line, " ");
      |                                    ^~~~
/tmp/cholesky-decomposition-1.c:43:34: note: expected ‘char *’ but argument is of type ‘const char *’
   43 | static char *concat_string(char *a, char *b) {
      |                            ~~~~~~^
/tmp/cholesky-decomposition-1.c: At top level:
/tmp/cholesky-decomposition-1.c:151:14: error: unknown type name ‘map_string_int’
  151 | int printSym(map_string_int m) { printMat(unpackSym(m)); }
      |              ^~~~~~~~~~~~~~
/tmp/cholesky-decomposition-1.c:153:16: error: unknown type name ‘map_string_int’
  153 | int printLower(map_string_int m) {
      |                ^~~~~~~~~~~~~~
/tmp/cholesky-decomposition-1.c:185:19: error: unknown type name ‘map_string_int’
  185 | int choleskyLower(map_string_int a) {
      |                   ^~~~~~~~~~~~~~
/tmp/cholesky-decomposition-1.c:231:10: error: unknown type name ‘map_string_int’
  231 | int demo(map_string_int a) {
      |          ^~~~~~~~~~~~~~
/tmp/cholesky-decomposition-1.c: In function ‘main’:
/tmp/cholesky-decomposition-1.c:247:3: warning: implicit declaration of function ‘demo’ [-Wimplicit-function-declaration]
  247 |   demo(makeSym(3, tmp19));
      |   ^~~~
