tests/rosetta/out/C/cholesky-decomposition-1.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:37:25Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_float concat_list_float(list_float a, list_float b) {
  list_float r = list_float_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
typedef struct {
  int order;
  list_float ele;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

double sqrtApprox(double x) {
  double guess = x;
  int i = 0;
  while (i < 20) {
    guess = (guess + x / guess) / 2.0;
    i = i + 1;
  }
  return guess;
}

int makeSym(int order, list_float elements) {
  return (tmp_item_t){.order = order, .ele = elements};
}

int unpackSym(map_string_int m) {
  int n = m.data["order"];
  int ele = m.data["ele"];
  list_int tmp1 = list_int_create(0);
  int mat = tmp1;
  int idx = 0;
  int r = 0;
  while ((r < n)) {
    list_float tmp2 = {0, NULL};
    list_float row = tmp2;
    int c = 0;
    while (c <= r) {
      list_float tmp3 = list_float_create(1);
      tmp3.data[0] = ele.data[idx];
      list_float tmp4 = concat_list_float(row, tmp3);
      row = tmp4;
      idx = idx + 1;
      c = c + 1;
    }
    while ((c < n)) {
      list_float tmp5 = list_float_create(1);
      tmp5.data[0] = 0.0;
      list_float tmp6 = concat_list_float(row, tmp5);
      row = tmp6;
      c = c + 1;
    }
    mat = 0;
    r = r + 1;
  }
  r = 0;
  while ((r < n)) {
    int c = r + 1;
    while ((c < n)) {
      mat.data[r].data[c] = mat.data[c].data[r];
      c = c + 1;
    }
    r = r + 1;
  }
  return mat;
}

int printMat(int m) {
  int i = 0;
  while (i < m.len) {
    const char *line = "";
    int j = 0;
    while (j < m.data[i].len) {
      char *tmp7 = _str(m.data[i].data[j]);
      char *tmp8 = concat_string(line, tmp7);
      line = tmp8;
      if (j < m.data[i].len - 1) {
        char *tmp9 = concat_string(line, " ");
        line = tmp9;
      }
      j = j + 1;
    }
    printf("%s\n", line);
    i = i + 1;
  }
}

int printSym(map_string_int m) { printMat(unpackSym(m)); }

int printLower(map_string_int m) {
  int n = m.data["order"];
  int ele = m.data["ele"];
  list_int tmp10 = list_int_create(0);
  int mat = tmp10;
  int idx = 0;
  int r = 0;
  while ((r < n)) {
    list_float tmp11 = {0, NULL};
    list_float row = tmp11;
    int c = 0;
    while (c <= r) {
      list_float tmp12 = list_float_create(1);
      tmp12.data[0] = ele.data[idx];
      list_float tmp13 = concat_list_float(row, tmp12);
      row = tmp13;
      idx = idx + 1;
      c = c + 1;
    }
    while ((c < n)) {
      list_float tmp14 = list_float_create(1);
      tmp14.data[0] = 0.0;
      list_float tmp15 = concat_list_float(row, tmp14);
      row = tmp15;
      c = c + 1;
    }
    mat = 0;
    r = r + 1;
  }
  printMat(mat);
}

int choleskyLower(map_string_int a) {
  int n = a.data["order"];
  int ae = a.data["ele"];
  list_float tmp16 = {0, NULL};
  list_float le = tmp16;
  int idx = 0;
  while (idx < ae.len) {
    list_float tmp17 = list_float_create(1);
    tmp17.data[0] = 0.0;
    list_float tmp18 = concat_list_float(le, tmp17);
    le = tmp18;
    idx = idx + 1;
  }
  int row = 1;
  int col = 1;
  int dr = 0;
  int dc = 0;
  int i = 0;
  while (i < ae.len) {
    int e = ae.data[i];
    if (i < dr) {
      int d = (e - le.data[i]) / le.data[dc];
      le.data[i] = d;
      int ci = col;
      int cx = dc;
      int j = i + 1;
      while (j <= dr) {
        cx = cx + ci;
        ci = ci + 1;
        le.data[j] = le.data[j] + d * le.data[cx];
        j = j + 1;
      }
      col = col + 1;
      dc = dc + col;
    } else {
      le.data[i] = sqrtApprox(e - le.data[i]);
      row = row + 1;
      dr = dr + row;
      col = 1;
      dc = 0;
    }
    i = i + 1;
  }
  return (tmp_item_t){.order = n, .ele = le};
}

int demo(map_string_int a) {
  printf("A:\n");
  printSym(a);
  printf("L:\n");
  int l = choleskyLower(a);
  printLower(l);
}

int main() {
  list_float tmp19 = list_float_create(6);
  tmp19.data[0] = 25.0;
  tmp19.data[1] = 15.0;
  tmp19.data[2] = 18.0;
  tmp19.data[3] = (-5.0);
  tmp19.data[4] = 0.0;
  tmp19.data[5] = 11.0;
  demo(makeSym(3, tmp19));
  list_float tmp20 = list_float_create(10);
  tmp20.data[0] = 18.0;
  tmp20.data[1] = 22.0;
  tmp20.data[2] = 70.0;
  tmp20.data[3] = 54.0;
  tmp20.data[4] = 86.0;
  tmp20.data[5] = 174.0;
  tmp20.data[6] = 42.0;
  tmp20.data[7] = 62.0;
  tmp20.data[8] = 134.0;
  tmp20.data[9] = 106.0;
  demo(makeSym(4, tmp20));
  return 0;
}
